# py-git-ghcli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: fast-pypi-release.yml  run-tests.yml
docs/: changelog.md
pyggc/ghcli/: simple.py
pyggc/ghcli/simple/: __init__.py
pyggc/git/: simple.py
pyggc/git/simple/: __init__.py
tests/test_ghcli/: test_simple.py
tests/test_git/: test_simple.py
